Quick fix for hero section padding on mobile.

--- a/css/stylesheets/screen.css
+++ b/css/stylesheets/screen.css
@@ -185,7 +185,7 @@ h6 {
 
 /* line 90, ../sass/_sections.scss */
 .hero-section--gradient-overlay {
-  padding-top: 14%;
+  padding-top: 120px;
   position: relative;
   width: 100%;
   height: 100vh;
@@ -197,31 +197,31 @@ h6 {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#39b7dd', endColorstr='#05abe0',GradientType=1 );
 }
 
-/* line 104, ../sass/_sections.scss */
+/* line 102, ../sass/_sections.scss */
 .hero-section--content-container {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
 }
 
-/* line 113, ../sass/_sections.scss */
+/* line 111, ../sass/_sections.scss */
 .hero-section--app-image {
   max-width: 330px;
   margin-top: -50px;
   padding-top: 24px;
 }
-/* line 117, ../sass/_sections.scss */
+/* line 115, ../sass/_sections.scss */
 .hero-section--app-image.fixed-top {
   margin-top: 0;
 }
 
-/* line 121, ../sass/_sections.scss */
+/* line 119, ../sass/_sections.scss */
 .hero-section--app-icon {
   max-width: 90px;
   margin-right: 30px;
 }
 
-/* line 127, ../sass/_sections.scss */
+/* line 125, ../sass/_sections.scss */
 .hero-section--input {
   width: 70%;
   border: none;
@@ -232,7 +232,7 @@ h6 {
   border-bottom-left-radius: 4px;
 }
 
-/* line 136, ../sass/_sections.scss */
+/* line 134, ../sass/_sections.scss */
 .hero-section--submit {
   width: 30%;
   border: 1px solid #222;
@@ -254,14 +254,14 @@ h6 {
   border-bottom-right-radius: 4px;
 }
 
-/* line 153, ../sass/_sections.scss */
+/* line 151, ../sass/_sections.scss */
 .hero-section--submit:hover {
   background: -moz-linear-gradient(top, #ffb815, #faae00);
   background: -webkit-linear-gradient(top, #ffb815, #faae00);
   background: linear-gradient(to bottom, #ffb815, #faae00);
 }
 
-/* line 159, ../sass/_sections.scss */
+/* line 157, ../sass/_sections.scss */
 .hero-section--submit:after {
   content: "";
   display: block;
@@ -274,7 +274,7 @@ h6 {
   border-bottom: 5px solid black;
 }
 
-/* line 172, ../sass/_sections.scss */
+/* line 170, ../sass/_sections.scss */
 .hero-section--scroll-btn {
   position: absolute;
   bottom: 35px;
@@ -290,7 +290,7 @@ h6 {
   letter-spacing: 1px;
 }
 
-/* line 186, ../sass/_sections.scss */
+/* line 184, ../sass/_sections.scss */
 .hero-section--scroll-btn:hover,
 .hero-section--scroll-btn:focus,
 .hero-section--scroll-btn:active {
@@ -299,7 +299,7 @@ h6 {
   text-decoration: none;
 }
 
-/* line 193, ../sass/_sections.scss */
+/* line 191, ../sass/_sections.scss */
 .hero-section--scroll-btn:after {
   content: "";
   display: block;
@@ -322,13 +322,13 @@ h6 {
   transition: 0.2s;
 }
 
-/* line 218, ../sass/_sections.scss */
+/* line 216, ../sass/_sections.scss */
 .section--content-wrapper {
   min-height: 100vh;
   position: relative;
 }
 
-/* line 234, ../sass/_sections.scss */
+/* line 232, ../sass/_sections.scss */
 .hero-section--circle {
   position: fixed;
   border: 1px solid #fff;
@@ -343,7 +343,7 @@ h6 {
   transition: 0.2s;
 }
 
-/* line 244, ../sass/_sections.scss */
+/* line 242, ../sass/_sections.scss */
 .hero-section--circle-1 {
   width: 5vw;
   height: 5vw;
@@ -380,7 +380,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 258, ../sass/_sections.scss */
+/* line 256, ../sass/_sections.scss */
 .hero-section--circle-2 {
   width: 15vw;
   height: 15vw;
@@ -417,7 +417,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 272, ../sass/_sections.scss */
+/* line 270, ../sass/_sections.scss */
 .hero-section--circle-3 {
   width: 25vw;
   height: 25vw;
@@ -454,7 +454,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 286, ../sass/_sections.scss */
+/* line 284, ../sass/_sections.scss */
 .hero-section--circle-4 {
   width: 35vw;
   height: 35vw;
@@ -491,7 +491,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 300, ../sass/_sections.scss */
+/* line 298, ../sass/_sections.scss */
 .hero-section--circle-5 {
   width: 45vw;
   height: 45vw;
@@ -528,7 +528,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 314, ../sass/_sections.scss */
+/* line 312, ../sass/_sections.scss */
 .hero-section--circle-6 {
   width: 55vw;
   height: 55vw;
@@ -565,7 +565,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 328, ../sass/_sections.scss */
+/* line 326, ../sass/_sections.scss */
 .hero-section--circle-7 {
   width: 65vw;
   height: 65vw;
@@ -602,7 +602,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 342, ../sass/_sections.scss */
+/* line 340, ../sass/_sections.scss */
 .hero-section--circle-8 {
   width: 75vw;
   height: 75vw;
@@ -639,7 +639,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 356, ../sass/_sections.scss */
+/* line 354, ../sass/_sections.scss */
 .hero-section--circle-9 {
   width: 85vw;
   height: 85vw;
@@ -676,7 +676,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 370, ../sass/_sections.scss */
+/* line 368, ../sass/_sections.scss */
 .hero-section--circle-10 {
   width: 95vw;
   height: 95vw;
@@ -713,7 +713,7 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 384, ../sass/_sections.scss */
+/* line 382, ../sass/_sections.scss */
 .hero-section--circle-11 {
   width: 105vw;
   height: 105vw;
@@ -750,23 +750,23 @@ h6 {
     border-color: RGBA(255, 255, 255, 0);
   }
 }
-/* line 398, ../sass/_sections.scss */
+/* line 396, ../sass/_sections.scss */
 .section-text {
   margin-bottom: 30px;
 }
 
-/* line 401, ../sass/_sections.scss */
+/* line 399, ../sass/_sections.scss */
 .section-anchor {
   position: relative;
   top: 20px;
   font-style: italic;
 }
 
-/* line 406, ../sass/_sections.scss */
+/* line 404, ../sass/_sections.scss */
 .pressup-app-section {
   position: relative;
 }
-/* line 409, ../sass/_sections.scss */
+/* line 407, ../sass/_sections.scss */
 .pressup-app-section img {
   display: block;
   position: relative;
@@ -776,23 +776,41 @@ h6 {
   margin-top: 40px;
 }
 
-/* line 418, ../sass/_sections.scss */
+/* line 416, ../sass/_sections.scss */
 .footer {
   text-align: center;
   padding: 44px;
   background-color: #f7f7f7;
 }
-/* line 426, ../sass/_sections.scss */
+/* line 424, ../sass/_sections.scss */
 .footer img {
   margin-bottom: 30px;
   max-width: 20px;
   display: inline-block;
 }
-/* line 431, ../sass/_sections.scss */
+/* line 429, ../sass/_sections.scss */
 .footer span {
   margin-left: 20px;
 }
 
+@media (min-width: 768px) {
+  /* line 434, ../sass/_sections.scss */
+  .hero-section--gradient-overlay {
+    padding-top: 120px;
+  }
+}
+@media (min-width: 992px) {
+  /* line 440, ../sass/_sections.scss */
+  .hero-section--gradient-overlay {
+    padding-top: 160px;
+  }
+}
+@media (min-width: 1200px) {
+  /* line 445, ../sass/_sections.scss */
+  .hero-section--gradient-overlay {
+    padding-top: 190px;
+  }
+}
 /* line 1, ../sass/_navigation.scss */
 .site-nav {
   width: 100%;
